--- a/testtools/src/org/netbeans/modules/testtools/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/Bundle.properties
@@ -16,8 +16,7 @@ Templates/TestTools/MyTestWorkspace.xml=Test Workspace
 Templates/TestTools/qa-functional.group=QA Functional Test Type
 Templates/TestTools/unit.group=Unit Test Type
 Templates/TestTools/simpleTest.java=Simple Test Suite
-Templates/TestTools/jemmyTest.java=Jemmy Test Suite
-Templates/TestTools/jellyTest.java=Jelly Test Suite
+Templates/TestTools/jellyTest.java=Jemmy&Jelly Test Suite
 Services/CompilerType/org-netbeans-modules-testtools-XTestCompiler.settings=XTest Compilation
 Services/Executor/org-netbeans-modules-testtools-XTestExecutor.settings=XTest Execution
 Templates/Services/CompilerType/org-netbeans-modules-testtools-XTestCompiler.settings=XTest Compilation
