--- a/testtools/src/org/netbeans/modules/testtools/templates/functional__build-.xml.template
+++ b/testtools/src/org/netbeans/modules/testtools/templates/functional__build-.xml.template
@@ -44,7 +44,7 @@ Microsystems, Inc. All Rights Reserved.
              this file will be searched in directories specified by property xtest.extra.jars.path 
                  example: <property name="xtest.extra.jars.ide" value="jdbc_driver1.zip;jdbcd_river2.jar"/>
           -->
-        <property name="xtest.extra.jars.ide" value="jemmy.jar;jelly-nb.jar"/>
+        <property name="xtest.extra.jars.ide" value="jemmy.jar;jelly2-nb.jar"/>
   
   
         <!-- Here you can specify paths and jars which will be mounted to the IDE's filesystems
