--- a/testtools/src/org/netbeans/modules/testtools/templates/jellyTest.java.template
+++ b/testtools/src/org/netbeans/modules/testtools/templates/jellyTest.java.template
@@ -6,37 +6,17 @@
 
 package Templates.TestTools;
 
-import java.io.File;
-import java.io.IOException;
 import java.io.PrintStream;
-import java.io.PrintWriter;
 
-import junit.framework.*;
-import org.netbeans.junit.*;
-
-import org.netbeans.jemmy.*;
 import org.netbeans.jemmy.operators.*;
-import org.netbeans.jemmy.util.PNGEncoder;
-import org.netbeans.jemmy.util.Dumper;
-
-import org.netbeans.test.oo.gui.jam.*;
-import org.netbeans.test.oo.gui.jello.*;
-import org.netbeans.test.oo.gui.jelly.*;
+import org.netbeans.jellytools.*;
 
 /** JUnit test suite with Jemmy support
  *
  * @author __USER__
  * @version 1.0
  */
-public class jellyTest extends NbTestCase {
-    
-    /** screen capture feature in case of failure is enabled by default
-     */
-    public static boolean captureScreen = !Boolean.getBoolean("jemmy.disable.screen.capture");
-
-    /** screen XML dump feature in case of failure is enabled by default
-     */
-    public static boolean dumpScreen = !Boolean.getBoolean("jemmy.disable.screen.xmldump");
+public class jellyTest extends JellyTestCase {
     
     /** constructor required by JUnit
      * @param testName method name to be used as testcase
@@ -53,12 +33,7 @@ public class jellyTest extends NbTestCase {
     
     /** method called before each testcase
      */
-    protected void setUp() throws IOException {
-        JellyProperties.setJemmyDebugTimeouts();
-        PrintWriter log=new PrintWriter(getLog(), true);
-        JellyProperties.setJemmyOutput(log, log);
-        JellyProperties.setJellyOutput(log, log);
-        JamUtilities.waitEventQueueEmpty(2000);
+    protected void setUp() {
     }
     
     /** method called after each testcase
@@ -66,53 +41,22 @@ public class jellyTest extends NbTestCase {
     protected void tearDown() {
     }
     
-    void fail(Exception e) {
-        e.printStackTrace(getLog());
-        if (captureScreen) {
-            try {
-                PNGEncoder.captureScreen(getWorkDirPath()+File.separator+"screen.png");
-            } catch (Exception e1) {}
-        }
-        if (dumpScreen) {
-            try {
-                Dumper.dumpAll(getWorkDirPath()+File.separator+"screen.xml");
-            } catch (Exception e2) {}
-        }
-        throw new AssertionFailedErrorException(e);
-    }
-    
     /** simple test case
      */
     public void testSimpleTestCase() {
-        try {
 
-            // place test case body here
+        // place test case body here
             
-        } catch (JemmyException e1) {
-            fail(e1);
-        } catch (JellyException e2) {
-            fail(e2);
-        } catch (JamRuntimeException e3) {
-            fail(e3);
-        }
     }
 
     /** test case with golden file
      */
     public void testGoldenTestCase() {
-        try {
-            PrintStream ref = getRef();
+        PrintStream ref = getRef();
 
-            // place test case body here
+        // place test case body here
             
-            compareReferenceFiles();
-        } catch (JemmyException e1) {
-            fail(e1);
-        } catch (JellyException e2) {
-            fail(e2);
-        } catch (JamRuntimeException e3) {
-            fail(e3);
-        }
+        compareReferenceFiles();
     }
 
     /** Use for internal test execution inside IDE
