Implemented #25657 - Create XSL submodule

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -53,7 +53,8 @@ local.config.xml=xml/api, \
         xml/tools, \
         xml/text-edit, \
         xml/tree-edit, \
-        xml/css
+        xml/css, \
+        xml/xsl
 
 local.config.vcsprofiles=vcsgeneric/profiles/cvsprofiles, \
         vcsgeneric/profiles/pvcs, \
