--- a/xml/build.xml
+++ b/xml/build.xml
@@ -21,7 +21,7 @@ Microsystems, Inc. All Rights Reserved.
     <taskdef name="genjavadoc" classname="org.netbeans.nbbuild.GenerateJavadoc" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="validatexml" classname="org.netbeans.nbbuild.XMLValidate" classpath="${nbext_root}/nbantext.jar;${binroot}/xml/catalog/release/modules/ext/resolver-1_1_nb.jar"/>
     <taskdef  name="for-each" classname="org.netbeans.nbbuild.ForEach" classpath="${nbext_root}/nbantext.jar"/>
-    <property name="submodules" value="api, tax, core, catalog, tools, text-edit, tree-edit, css"/>
+    <property name="submodules" value="api, tax, core, catalog, tools, text-edit, tree-edit, css, xsl"/>
 
     <property name="build.compiler.debug" value="on"/>
 
