--- a/xsl/build.xml
+++ b/xsl/build.xml
@@ -12,7 +12,7 @@ Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 Microsystems, Inc. All Rights Reserved.
 -->
 
-<project name="xml/text-edit" default="netbeans" basedir=".">
+<project name="xml/xsl" default="netbeans" basedir=".">
 
     <property name="xml_root" location=".."/>
     <property name="api_root" location="${xml_root}/api"/>
@@ -23,6 +23,8 @@ Microsystems, Inc. All Rights Reserved.
     <property name="nbroot" location="${xml_root}/.."/>
     <property name="binroot" location="${nbroot}/../nbextra"/>
     <property name="nbext_root" location="${nbroot}/nbbuild"/>
+
+    <property name="xml-apis" location="${binroot}/core/release/lib/ext/xml-apis.jar" />
 
     <property name="license.file" location="${nbroot}/nbbuild/standard-nbm-license.txt"/>
     <property name="homepage.base" value="netbeans.org"/>
@@ -35,7 +37,6 @@ Microsystems, Inc. All Rights Reserved.
     <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="${nbext_root}/nbantext.jar"/>
     <taskdef name="genjavadoc" classname="org.netbeans.nbbuild.GenerateJavadoc" classpath="${nbext_root}/nbantext.jar"/>
-    <taskdef name="for-each" classname="org.netbeans.nbbuild.ForEach" classpath="${nbext_root}/nbantext.jar"/>
 
     <property name="build.compiler.debug" value="on"/>
 
@@ -47,42 +48,36 @@ Microsystems, Inc. All Rights Reserved.
 
         <property file="${xml_root}/spec-vers.properties"/>
         <filter  token="API_SPEC_VERS_SUBST" value="${xml.api.specification.version}"/>
-        <filter token="TEXT_SPEC_VERS_SUBST" value="${xml.text-edit.specification.version}"/>
+        <filter  token="XSL_SPEC_VERS_SUBST" value="${xml.xsl.specification.version}"/>
         <filter token="CORE_SPEC_VERS_SUBST" value="${xml.core.specification.version}"/>
         <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     </target>
 
     <target name="compile">
-        <echo message="Compiling XML text-edit module classes..."/>
+        <echo message="Compiling XSL module classes..."/>
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
             <classpath>        
-                <pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
                 <fileset dir="${nbroot}/openide/netbeans/lib">
                     <include name="openide*.jar"/>
                 </fileset>
-                <pathelement location="${nbroot}/editor/netbeans/modules/ext/nb-editor.jar"/>
-                <pathelement location="${nbroot}/editor/netbeans/modules/editor.jar"/>
-        	<pathelement location="${binroot}/core/release/lib/ext/dom.jar"/>
-        	<pathelement location="${binroot}/core/release/lib/ext/sax.jar"/>
-        	<pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>  <!-- same as above -->
-                <pathelement location="${tax_lib_root}/src/"/>
+                <pathelement location="${xml-apis}"/> <!-- JAXP and SAX dependency -->
                 <pathelement location="${core_root}/src/"/>
+                <pathelement location="${tax_lib_root}/src/"/>
                 <pathelement location="${api_root}/src/"/>
+                <!--Servlet API-->
+                <pathelement location="${binroot}/httpserver/servletapi/release/modules/ext/servlet-2.2.jar" />
             </classpath>
         </javac>
-
-        <for-each locations="compat"/>
     </target>
 
     <target name="jars" depends="init,compile">
         <mkdir dir="netbeans/modules"/>
 
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-        <locjar jarfile="netbeans/modules/xml-text-edit.jar"
+        <locjar jarfile="netbeans/modules/xsl.jar"
                 manifest="manifest-subst.mf"
                 compress="false">
             <fileset dir="src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
-            <fileset dir="compat/src" excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"/>
             <locale name="ja"/>
         </locjar>    
     </target>
@@ -105,21 +100,21 @@ Microsystems, Inc. All Rights Reserved.
         <mkdir dir="test"/>
 
         <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
-        <jar jarfile="test/xml-text-test.jar" manifest="manifest-subst.mf" compress="false">
+        <jar jarfile="test/xsl-test.jar" manifest="manifest-subst.mf" compress="false">
             <fileset dir="src" excludesfile="../../nbbuild/standard-jar-excludes.txt"/>
         </jar>
-        <nbinstaller module="test/xml-text-test.jar" action="reinstall"/>
+        <nbinstaller module="test/xsl-test.jar" action="reinstall"/>
     </target>
     
     
     <target name="nbm" depends="netbeans">
         <delete dir="Info"/>
-        <makenbm file="../xml-text-edit.nbm"
+        <makenbm file="../xsl.nbm"
                  topdir="."
                  needsrestart="false"
-                 module="netbeans/modules/xml-text-edit.jar"
-                 homepage="http://xml.${homepage.base}/text-edit/"
-                 distribution="http://${dist.base}/xml-text-edit.nbm">
+                 module="netbeans/modules/xsl.jar"
+                 homepage="http://xml.${homepage.base}/xsl/"
+                 distribution="http://${dist.base}/xsl.nbm">
             <license file="${license.file}"/>
             <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
         </makenbm>
@@ -132,11 +127,9 @@ Microsystems, Inc. All Rights Reserved.
             </fileset>
         </delete>
         <delete file="manifest-subst.mf"/>
-        <delete file="../xml-text-edit.nbm"/>
+        <delete file="../xsl.nbm"/>
         <delete dir="netbeans"/>
         <delete dir="Info"/>
-
-        <for-each locations="compat"/>
     </target>
 
     <target name="real-clean" depends="clean">
@@ -148,7 +141,7 @@ Microsystems, Inc. All Rights Reserved.
     <target name="javadoc">
         <delete dir="javadoc"/>
         <mkdir dir="javadoc"/>
-        <genjavadoc destdir="javadoc" modules="openide,editor,xml/text-edit">
+        <genjavadoc destdir="javadoc" modules="openide,xml/xsl">
             <topdir path="${nbroot}"/>
         </genjavadoc>
     </target>
