The accessibility added to various components. This is a fix of issue #25627.

--- a/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
@@ -31,6 +31,9 @@ ACS_VisualizerPropertyPanelA11yDesc=Choose diff visualizer.
 LBL_ProvidersPropEditorTitle=Diff Engines
 LBL_VisualizersPropEditorTitle=Diff Visualizers
 
+ACSN_Diff_Top_Component=Diff Component
+ACSD_Diff_Top_Component=Differences between source files
+
 # DefaultDiffBeanInfo
 PROP_showDiffSelector=Show Diff Service Selector
 HINT_showDiffSelector=Show panel with engine and visualizer selectors.
