--- a/diff/src/org/netbeans/modules/diff/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/visualizer/Bundle.properties
@@ -19,11 +19,20 @@ DiffComponent.prevButton.mnemonic=P
 
 MSG_NoDifference=No differences were found between ''{0}'' and ''{1}''.
 
+# DiffPanel
 ACS_DiffPanelA11yName=Diff Panel
 ACS_DiffPanelA11yDesc=Diff panel.
+ACS_EditorPane1A11yName=The First File
+ACS_EditorPane1A11yDescr=The content of the first file.
+ACS_EditorPane2A11yName=The Second File
+ACS_EditorPane2A11yDescr=The content of the second file.
 
 GraphicalDiffVisualizer.displayName=Graphical Diff Viewer
 GraphicalDiffVisualizer.shortDescription=Graphical color viewer of differences between two sources.
+
+# LinesComponent
+ACSN_Lines_Component=Line Numbers Component
+ACSD_Lines_Component=Component for displaying line numbers and annotations.
 
 # GraphicalDiffVisualizerBeanInfo
 PROP_colorAdded=Color of Added Text
