--- a/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
+++ b/diff/src/org/netbeans/modules/merge/builtin/visualizer/Bundle.properties
@@ -23,7 +23,14 @@ HINT_colorResolvedConflict=The background color of text applied to resolve the c
 PROP_colorOtherConflict=Color of Text Not Applied To Resolve Conflict
 HINT_colorOtherConflict=The background color of text not applied to resolve the conflict
 
+# MergeDialogComponent
 MergeDialogComponent.title=Merge Conflicts Resolver
+ACSN_Merge_Dialog_Component=Conflict Resolver Component
+ACSD_Merge_Dialog_Component=Graphical resolver of merge conflicts.
+ACSN_Merge_Tabbed_Pane=Files With Conflicts
+ACSD_Merge_Tabbed_Pane=Tabs of files with conflicts.
+
+# MergePanel
 MergePanel.nextButton.toolTipText=Next Difference
 MergePanel.nextButton.mnemonic=N
 MergePanel.prevButton.toolTipText=Previous Difference
@@ -33,6 +40,12 @@ MergePanel.prevButton.mnemonic=P
 # {1} .. total number of conflicts
 # {2} .. number of unresolved conflicts
 MergePanel.statusLine=Conflict: {0} of {1}, Unresolved: {2}
+ACS_EditorPane1A11yName=The First File
+ACS_EditorPane1A11yDescr=The content of the first file.
+ACS_EditorPane2A11yName=The Second File
+ACS_EditorPane2A11yDescr=The content of the second file.
+ACS_EditorPane3A11yName=The Result of Merge
+ACS_EditorPane3A11yDescr=The content of the result of the merge and resolved conflicts.
 
 
 MergePanel.acceptLeftButton.text=Accept
