--- a/utilities/src/org/netbeans/modules/url/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/url/Bundle.properties
@@ -72,7 +72,7 @@ Bookmarks/ffj-kb.url=Sun ONE Studio Developer &Resources
 Bookmarks/apis-online.url=NetBeans &Open APIs
 Bookmarks/swing.url=&Swing Connection
 Menu/Help/netbeans-web-link.url=&NetBeans Open Source Site
-Menu/Help/submit-feedback-link.url=Submit &Feedback
+Menu/Help/submit-feedback-link.url=Contact the NetBeans &Team
 Welcome/netbeans-ide-home.url=Home on the Web
 
 # URLDataObject
