--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -38,7 +38,7 @@ LBL_Action_Tests=Tests
 LBL_Action=<name for action>
 LBL_true=True
 LBL_false=False
-LBL_junit_settings=Unit tests
+LBL_junit_settings=JUnit Module Settings
 PROP_file_system=Target file system for tests
 HINT_file_system=Target file system for tests
 PROP_suite_template=Suite class template
@@ -126,3 +126,15 @@ HINT_generate_nbjunit=Generate tests based on NetBeans extension to JUnit
 JUnitCfgOfCreate.regenerateSuiteMethod.text=Regenerate suite method
 PROP_regenerate_suite_method=Regenerate suite method
 HINT_regenerate_suite_method=Regenerate suite method
+
+# Layer stuff
+# Help stuff
+Menu/Help/HelpShortcuts/org-netbeans-modules-junit-mainpage.xml=JUnit Module Help
+Actions/Help/org-netbeans-modules-junit-mainpage.xml=JUnit Module Help
+
+# Options stuff
+org-netbeans-modules-junit-JUnitSettings.settings=JUnit Module Settings
+
+# Templates stuff
+Templates/JUnit/SimpleJUnitTest.java=Simple JUnit TestCase
+Templates/JUnit/SimpleNbJUnitTest.java=Simple NbJUnit TestCase
