bugfix #25719, add accessible descriptions

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -263,6 +263,10 @@ CTL_FMT_GlobalProperties={0,choice,0#No Properties|1#Properties of {1}|2#Propert
 # {1} = display name of the first node or ""
 CTL_FMT_LocalProperties={0,choice,0#No Properties|1#Properties of {1}|2#Properties of Multiple Objects}
 
+# accessible texts
+ACSN_PropertiesSheet=Property sheet
+ACSD_PropertiesSheet=View shows properties for given node.
+
 #NbTopManager
 # shown in the status line as a notification about saving a DataObject
 # {0} = name of the DataObject
