--- a/testtools/src/org/netbeans/modules/testtools/wizards/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/wizards/Bundle.properties
@@ -8,3 +8,19 @@ TTT_TestBagInclude=Defines tests included in execution. Example: org/netbeans/my
 TTT_TestBagExclude=Defines tests excluded from execution. Example: **/data/** excludes all data folders.
 
 TTT_TestBagExecutor=IDE - all tests will be executed inside IDE, Code - tests do not need IDE and will be executed in empty JVM
+
+TTT_TestCaseName=Must be valid Java method identifier. Prefix test is recommended.
+
+TTT_TestCaseTemplate=Choose template for test case method.
+
+TTT_TestCaseList=List of test case methods in current test suite.
+
+LBL_TestCaseList=Test Cases List
+
+TTT_TestCaseAdd=Adds test case with given name and choosen template into list.
+
+TTT_TestCaseRemove=Removes selected test case from list.
+
+TTT_TestCaseUp=Moves selected test case up in list.
+
+TTT_TestCaseDown=Moves selected test case down in list.
