--- a/testtools/src/org/netbeans/modules/testtools/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/Bundle.properties
@@ -21,3 +21,14 @@ Services/CompilerType/org-netbeans-modules-testtools-XTestCompiler.settings=XTes
 Services/Executor/org-netbeans-modules-testtools-XTestExecutor.settings=XTest Execution
 Templates/Services/CompilerType/org-netbeans-modules-testtools-XTestCompiler.settings=XTest Compilation
 Templates/Services/Executor/org-netbeans-modules-testtools-XTestExecutor.settings=XTest Execution
+Mount/Javadoc/org-netbeans-modules-testtools-jelly2-nb-javadoc.xml=Jelly2 API
+Mount/java/org-netbeans-modules-testtools-jelly2-library.xml=Jelly2 Library
+
+# Module properties:
+OpenIDE-Module-Name: TestTools
+OpenIDE-Module-Display-Category: Tools
+OpenIDE-Module-Short-Description: XTest, Jemmy and Jelly technology preview module. 
+OpenIDE-Module-Long-Description=Module is intended to show the way to all XTest, Jemmy and JellyTools beginners \
+ and help them to create automated tests from scratch. It provides documentation of used technologies. \
+ It makes easy to create proper test harness directory structures, build scripts, configuration files, \
+ GUI test components and test suites for API or GUI testing.
