Fixed #25721 - Search Result Window has null Accessible Description

--- a/utilities/src/org/netbeans/modules/search/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/search/Bundle.properties
@@ -13,6 +13,10 @@
 #Full-text search type
 TEXT_LABEL_RE=Regular Expression:
 
+#ResultViewTopComponent
+ACSN_ResultViewTopComponent=Search Results
+ACSD_ResultViewTopComponent=Dialog displays search results.
+
 #buttons
 TEXT_BUTTON_APPLY=\ Use This Criterion for Search
 ACS_TEXT_BUTTON_APPLY=N/A
