--- a/testtools/src/org/netbeans/modules/testtools/wizards/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/wizards/Bundle.properties
@@ -24,3 +24,153 @@ TTT_TestCaseRemove=Removes selected test case from list.
 TTT_TestCaseUp=Moves selected test case up in list.
 
 TTT_TestCaseDown=Moves selected test case down in list.
+
+TTT_TestSuiteName=Test Suite Name must be valid Java class name identifier.
+
+TTT_TestSuitePackage=Enter valid package name for Test Suite (use dot or slash as delimiters).
+
+TTT_TestSuiteTemplate=Select from available templates.
+
+TTT_TestTypeSuffix=Enter string added as command line suffix during IDE execution.
+
+TTT_TestTypeCompExc=Pattern used as exclude for compilation. Exmple: **/data/** excludes all data folders.
+
+CTL_CompClassPathCust=Customize Compilation Class Path
+
+CTL_ExecutionExtraJarsCust=Customize Execution Extra Jars
+
+CTL_JemmyJARHomeCust=Customize Jemmy JAR Home
+
+CTL_JellyJARHomeCust=Customize Jelly JAR Home
+
+TTT_CompileClassPath=Enter class path used for compilation delimited by semicolon. Use paths relative to test workspace or to ${netbeans.home} property or Customizer.
+
+TTT_ExecExtraJARs=Enter extra JARs needed during tests execution delimited by semicolon. Use paths relative to test workspace or to ${netbeans.home} property or Customizer.
+
+TTT_JemmyJARHome=Enter directory where jemmy.jar is located.
+
+TTT_JellyJarHome=Enter directory where jelly*.jars are located.
+
+TTT_TestTypeSetDefault=Sets Test Type as default in current Test Workspace.
+
+TTT_TestTypeUseJemmy=Enable to use JEmmy and Jelly libraries for Test Type.
+
+TTT_TestTypeWindowSystem=Select window system for IDE execution.
+
+TTT_TestTypeName=Enter new Test Type name without spaces.
+
+TTT_TestTypeTemplate=Select from available templates.
+
+TTT_AdvancedSettings=Use only with detailed XTest knowledge.
+
+TTT_TestWorkspaceLevel=Select new Test Workspace level.
+
+TTT_TestWorkspaceDefaultTT=Enter Test Type default for current Test Workspace. 
+
+TTT_TestWorkspaceAttrs=Enter attributes default for current Test Workspace. 
+
+TTT_NetbeansHome=Enter directory with tested IDE.
+
+TTT_XTestHome=Enter directory with XTest distribution.
+
+CTL_NetbeansHomeCust=Customize Netbeans Home
+
+TTT_XTestHomeCust=Customize XTest Home
+
+LBL_TestSuiteDescription=Template Description:\ 
+
+LBL_TestSuitePanelDescription=Test Suite Template and Target Location
+
+LBL_TestSuitePackage=Package:\ 
+
+LBL_TestSuiteNoDescription=No description
+
+LBL_TestSuiteName=Name:\ 
+
+LBL_TestSuiteTemplate=Select a Template:\ 
+
+LBL_TestCasesRemove=Remove
+
+LBL_TestCasesName=Test Case Name:\ 
+
+LBL_TestCasesDown=Down
+
+LBL_TestCasesSampleMethodName=testMyTestCase
+
+LBL_TestCasesTemplate=Template:\ 
+
+LBL_TestCasesAdd=Add
+
+LBL_TestCasesCreate=Create Test Cases
+
+LBL_TestCasesUp=Up
+
+LBL_TestBagExecInclude=Execution Include Pattern:\ 
+
+LBL_TestBagExecutorIDE=IDE
+
+LBL_TestBagSettings=Test Bag Settings
+
+LBL_TestBagExecutorCode=Code
+
+CTL_DefaultName=<default name>
+
+LBL_TestBagExecExclude=Execution Exclude Pattern:\ 
+
+LBL_TestBagExecutor=Executor:\ 
+
+LBL_TestBagName=Test Bag Name:\ 
+
+LBL_TestBagAttributes=Attributes:\ 
+
+LBL_TestWorkspacePanelName=Test_Workspace_Settings
+
+LBL_TestWorkspaceXTestHome=Select_XTest_Home_Directory
+
+LBL_TestWorkspaceNetbeansHome=Select_Netbeans_Home_Directory_(different_than_current)
+
+MSG_NoDescription=No description
+
+LBL_TestTypeTemplate=Select a Template:\ 
+
+LBL_TestTypeName=Name:\ 
+
+LBL_TestTypeTemplateDescription=Template Description:\ 
+
+LBL_TestTypePanelName=Test Type Name and Template
+
+LBL_TestTypeSettingsPanelName=Test Type Settings
+
+MSG_TestTypeTestExists=Test Type with this name already exists or has invalid name.
+
+LBL_TestTypeMDI=MDI (Full Screen Mode)
+
+LBL_TestTypeSetTestAsDefault=Set Test Type as default in Test Workspace
+
+LBL_TestTypeWindowsSystem=Windows System:\ 
+
+LBL_TestTypeSDI=SDI (Multiple Smaller Windows Mode)
+
+LBL_TestTypeUseJemmy=Use Jemmy and Jelly libraries
+
+LBL_TestTypeJellyJARHome=Jelly JAR Home:\ 
+
+LBL_TestTypeAdvancedPanelName=Test Type Advanced Settings
+
+LBL_TestTypeSelectJellyHome=Select Jelly Home Directory
+
+LBL_TestTypeCompExclPattern=Compilation Exclude Pattern:\ 
+
+LBL_TestTypeCommandLineSuffix=Command Line Suffix:\ 
+
+LBL_TestTypeSelectClassPathElement=Select Class Path Element
+
+LBL_TestTypeSelectJemmyHome=Select Jemmy Home Directory
+
+LBL_TestTypeSelectJAR=Select Extra Jar
+
+LBL_TestTypeExtraJARs=Execution Extra JARs:\ 
+
+LBL_TestTypeJemmyJARHome=Jemmy JAR Home:\ 
+
+LBL_TestTypeCompClassPath=Compliation Class Path:\ 
