Bug #25676 fixed a11y fix

--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -402,3 +402,8 @@ ACSD_ELCE_Add=N/A
 ACSD_ELCE_Change=N/A
 ACSD_ELCE_Remove=N/A
 CTL_ELCE_Empty=<empty>
+
+#a11y
+ACSN_DataObjectPanel=N/A
+ACSD_DataObjectPanel=N/A
+
